<resources>
    <string name="app_name">Team11Project</string>

    <string name="categories_screen_title">Moje Kategorije</string>
    <string name="tasks_add_title">Dodaj nov zadatak</string>
    <string name="button_add">Dodaj</string>
    <string name="button_edit">Izmeni</string>
    <string name="button_delete">Obriši</string>
    <string name="category_name_placeholder">Naziv kategorije</string>
    <string name="add_new_category_title">Dodajte kategoriju</string>
    <string name="category_npr">Npr. Posao, Trening...</string>
    <string name="category_choose">Izaberite boju</string>
    <string name="edit_category_name">Novi naziv kategorije</string>
    <string name="edit_category_title">Izmenite kategoriju</string>
    <string name="save_changes">Sačuvaj izmene</string>
    <string name="cancel">Otkaži</string>
    <string name="task_title">Naziv zadatka</string>
    <string name="task_description">Opis zadatka</string>
    <string name="task_time">Vreme izvrsavanja</string>
    <string name="task_hardness">Tezina zadatka</string>
    <string name="task_important">Bitnost zadatka</string>
    <string name="delete_confirm_message">Da li ste sigurni da želite da obrišete \'%1$s\'?</string>

    <string name="category">Kategorija</string>
    <string name="task_recurring">Ponavljajući zadatak</string>
    <string name="recurrence_interval_hint">Interval ponavljanja (npr. 2)</string>
    <string name="recurrence_every">Ponavlja se svakog</string>
    <string name="recurrence_day">Dana</string>
    <string name="recurrence_week">Nedelje</string>
    <string name="recurrence_start_date">Datum početka</string>
    <string name="recurrence_end_date">Datum završetka</string>
    <string name="recurrence_time_hint">Vreme početka</string>
    <string name="execution_time">Vreme izvršenja</string>

    <!-- Težina -->
    <string name="task_very_easy">Veoma lak (1 XP)</string>
    <string name="task_easy">Lak (3 XP)</string>
    <string name="task_hard">Težak (7 XP)</string>
    <string name="task_extreme">Ekstremno težak (20 XP)</string>

    <!-- Bitnost -->
    <string name="task_normal">Normalan (1 XP)</string>
    <string name="task_important_3xp">Važan (3 XP)</string>
    <string name="task_very_important_10xp">Veoma važan (10 XP)</string>
    <string name="task_special_100xp">Specijalan (100 XP)</string>

    <string name="action_home_title">Pocetna strana</string>
    <string name="logout">Logout</string>
    <string name="dobrodosli_hs">Dobrodošli na Home Screen</string>
    <string name="mojProfil">Moj profil</string>
    <string name="dodaj_izmeni_zadatke">Zadaci</string>
    <string name="login">Log in</string>
    <string name="napredak_kroz_nivoe">Napredak kroz nivoe</string>

    <!-- Taskovi -->
    <string name="my_tasks_title">Moji zadaci</string>
    <string name="task_name_placeholder">Naziv zadatka</string>
    <string name="task_time_placeholder">20. Avg 2025, 15:00</string>
    <string name="task_xp_value_placeholder">Vrednost: 23 XP</string>
    <string name="task_xp_value_format">Vrednost: %1$d XP</string>
    <string name="complete_task_button_description">Dugme da označi zadatak kao završen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prikazi_kategorije">Kategorije</string>
    <string name="svi_profili">Svi profili</string>
    <string name="stara_lozinka">Stara lozinka</string>
    <string name="nova_lozinka">Nova lozinka</string>
    <string name="potvrdi_lozinku">Potvrdi lozinku</string>
    <string name="promeni_loznku">Promeni loznku</string>
    <string name="korisni_ko_ime">Korisničko ime</string>
    <string name="titula_po_etnik">Titula: Početnik</string>
    <string name="level_1">Level: 1</string>
    <string name="statistike">⚔ Statistike</string>
    <string name="snaga_pp_0">Snaga (PP): 0</string>
    <string name="xp_0">XP: 0</string>
    <string name="nov_i_i_0">Novčići: 0</string>
    <string name="dostignu_a">🏅 Dostignuća</string>
    <string name="broj_bed_eva_0">Broj bedževa: 0</string>
    <string name="oprema">Oprema</string>
    <string name="qr_kod">📲 QR kod</string>
    <string name="promeni_lozinku">Promeni lozinku</string>
    <string name="prodavnica">Prodavnica</string>
    <string name="borba_sa_bosom">BORBA SA BOSOM</string>
    <string name="_5_5_napada">5/5 napada</string>
    <string name="aktivna_oprema">Aktivna oprema:</string>
    <string name="_150_pp">150 PP</string>
    <string name="_200_200_hp">200/200 HP</string>
    <string name="napad">NAPAD</string>
    <string name="prijatelji">Prijatelji</string>
    <string name="pretra_i_korisnike">Pretraži korisnike</string>
    <string name="dodaj">Dodaj</string>
    <string name="scan_qr">Scan QR</string>
    <string name="ime_usera">Ime usera</string>
    <string name="kreiraj_savez">Kreiraj savez</string>
    <string name="savez">Savez</string>
    <string name="izbrisi_savez">Izbrisi savez</string>
    <string name="sansa_za_pogodak">Sansa za pogodak: 68%</string>
    <string name="pristupi_cetu">Pristupi cetu</string>
    <string name="zapocni_misiju">Zapocni misiju</string>
    <string name="members">Members:</string>
    <string name="statistike2">STATISTIKE</string>
    <string name="broj_uzastopnih_aktivnih_dana_0">Broj uzastopnih aktivnih dana: 0</string>
    <string name="pregled_zadataka">Pregled zadataka:</string>
    <string name="zavr_eni_zadaci_po_kategoriji">Završeni zadaci po kategoriji:</string>
    <string name="prosecna_tezina_zadataka">Prosečna težina zadataka:</string>
    <string name="najdu_i_niz_uspe_no_ura_enih_zadataka_0_dana">Najduži niz uspešno urađenih zadataka: 0 dana</string>
    <string name="broj_zapo_etih_specijalnih_misija_0">Broj započetih specijalnih misija: 0</string>
    <string name="broj_zavr_enih_specijalnih_misija_0">Broj završenih specijalnih misija: 0</string>
    <string name="xp_poslednjih_7_dana">XP poslednjih 7 dana:</string>
    <string name="osvojeni_xp_u_poslednjih_7_dana">Osvojeni XP u poslednjih 7 dana:</string>
    <string name="sve_nagrade">Sve nagrade</string>
    <string name="nagrade_iz_specijalnih_misija">Nagrade iz specijalnih misija</string>
    <string name="ukupno_bed_eva_0">Ukupno bedževa: 0</string>
    <string name="nemate_osvojenih_nagrada_iz_specijalnih_misija">Nemate osvojenih nagrada iz specijalnih misija</string>
    <string name="badge">Badge</string>
    <string name="badge1">Badge</string>
    <string name="nagrada_1">Nagrada #1</string>
    <string name="coin">Coin</string>
    <string name="novcici">Novčići: 0</string>
    <string name="potion1">Potion</string>
    <string name="napitak">Napitak</string>
    <string name="clothing1">Clothing</string>
    <string name="odeca">Odeća</string>
    <string name="aktivna_oprema1">Aktivna oprema</string>
    <string name="izaberite_opremu">Izaberite opremu</string>
</resources>