<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stara_lozinka"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nova_lozinka"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/potvrdi_lozinku"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promeni_loznku" />

</LinearLayout>
