<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:id="@+id/view_category_color"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:background="@color/purple_500"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/text_view_task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/task_name_placeholder"/> <!-- tools:text za prikaz u dizajneru -->

            <TextView
                android:id="@+id/text_view_execution_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_time"
                android:drawablePadding="4dp"
                app:drawableTint="@color/text_secondary"
                tools:text="@string/task_time_placeholder"/>

            <TextView
                android:id="@+id/text_view_xp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_xp"
                android:drawablePadding="4dp"
                app:drawableTint="@color/picker_amber"
                tools:text="@string/task_xp_value_placeholder"/>

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>